initial nav and footer

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <nav class = "nav nav-bottom">
             <a href = "">About</a>
-            <a href = "">Conect</a>
+            <a href = "">Connect</a>
             <a href = "">Donate</a>
             <a href = "">Resources</a>
         </nav>
@@ -33,17 +33,22 @@
     </main>
 
     <footer>
-        <section>
-            logo
+        <section class = "footer footer-logo">
+            <img scr = "" alt = "Home"></a>
+            <h5>Keeping NC in Flow</h5>
         </section>
 
-        <section>
-            pages
+        <section class = "footer footer-pages">
+            <h3>Pages</h3>
+            <a href = "">About</a>
+            <a href = "">Connect</a>
+            <a href = "">Donate</a>
+            <a href = "">Resources</a>
         </section>
 
-        <section>
-            Find us on
-        </div>
+        <section class = "footer footer-socials">
+            Find us on...
+        </section>
     </footer>
 
 </body>
