Most up to date

--- a/pages/connect.html
+++ b/pages/connect.html
@@ -7,9 +7,9 @@
     <link
       rel="icon"
       type="TheFlowState Tab Icon Water Droplet"
-      href="/connect page photos/5611083.png"
+      href="/assets/Images/ConnectTabIcon-Droplet.png"
     />
-    <link rel="stylesheet" href="connect.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body></body>
 </html>
