--- a/pages/donation.html
+++ b/pages/donation.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Donation</title>
 
-    <link rel="stylesheet" href="assets/css/donation.css" />
-    <link rel="stylesheet" href="assets/css/styles.css" />
+    <link rel="stylesheet" href="../assets/css/donation.css" />
+    <link rel="stylesheet" href="../assets/css/styles.css" />
   </head>
 
   <header>Header soon to be implemented</header>
@@ -64,7 +64,7 @@
       </div>
     </section>
 
-    <script src="assets/js/donation.js"></script>
+    <script src="../assets/js/donation.js"></script>
   </body>
 
   <footer> Footer soon to be implemented</footer>
