updated nav design

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <nav class = "nav nav-top">
             <a class = "logo-btn" href = "index.html">
-                <img scr = "" alt = "Home"></a>
+                <img src="../TheFlowState/assets/Images/TheFlowState.png" alt = "Home"></a>
         </nav>
 
         <nav class = "nav nav-bottom">
