Added Submit function

--- a/pages/donation.html
+++ b/pages/donation.html
@@ -11,8 +11,8 @@
 
   <header>
     <nav class="nav nav-top">
-      <a class="logo-btn" href="index.html">
-        <img src="../assets/Images/TheFlowState.png" alt="Home"
+      <a class="logo-btn" href="../index.html">
+        <img src="../assets/images/TheFlowState.png" alt="Home"
       /></a>
     </nav>
     <nav class="nav nav-bottom">
@@ -87,6 +87,10 @@
             </button>
           </div>
         </div>
+      </div>
+
+      <div class="donation-submit">
+        <button id="donate-button" class="donate-button">Donate</button>
       </div>
     </section>
 
