Home page about

--- a/index.html
+++ b/index.html
@@ -32,24 +32,31 @@
 
     <main>
         <!-- Picture with motto -->
-        <div class = "home-container motto">
+        <section class = "home-container motto">
             <div class = "motto-overlay">
-                <P>“When Water Flows, Communities Thrive.”</P>
+                <p>“When Water Flows, Communities Thrive.”</p>
             </div>
-        </div>
+        </section>
 
+        <!-- About -->
+        <section class = "home-container about">
+            <div class = "about-overlay">
+                <h2>Why We’re Here</h2>
 
-        <!-- Slides -->
-        <!-- About with learn more -->
-        <!-- <section class = "">
+                <p>Across North Carolina, several communities still struggle to access safe and reliable drinking water. At The Flow State, we’re committed to changing that with one drop, one home, one community at a time. As a digital hub for residents and supporters, we connect people to trusted resources, volunteer opportunities, and transparent ways to give back. Because we believe that when water flows, communities thrive.</p>
 
-        </section> -->
-        <div class = "home-container about">
-            <P>
-                Place holdder ....
+                <a class = "about-overlay about-btn" href = "pages/About.html">Learn More</a>
+            </div>
+        </section>
 
-            </P>
-        </div>
+        <!-- Get Involved -->
+        <section class = "home-container get-involved">
+            <div class = "get-involved-overlay">
+                <p>“Ways to get get-involved</p>
+            </div>
+        </section>
+
+        <div class = "home-container spacing"></div>
 
     </main>
 
