Bug fix for about page

--- a/pages/About.html
+++ b/pages/About.html
@@ -16,14 +16,16 @@
     <header>
         <nav class = "nav nav-top">
             <a class = "logo-btn" href = "index.html">
-                <img src="/assets/Images/TheFlowState.png" alt = "Home"></a>
+                <img src="../assets/Images/TheFlowState.png" alt = "Home">
+                <p>The Flow State</p>
+            </a>
         </nav>
 
         <nav class = "nav nav-bottom">
-            <a href="/pages/About.html">About</a>
-            <a href="/pages/connect.html">Connect</a>
-            <a href="/pages/donation.html">Donate</a>
-            <a href="/pages/resources.html">Resources</a>
+            <a href = "pages/About.html">About</a>
+            <a href = "pages/connect.html">Connect</a>
+            <a href = "pages/donation.html">Donate</a>
+            <a href = "pages/resources.html">Resources</a>
         </nav>
 
     </header>
@@ -57,28 +59,28 @@
         <h2>Meet Our Team</h2>
         <ul class="team-list">
             <li id="Brendan">
-                <img class="headshot" src="/assets/Images/Brendan_Jefferson.jpg" alt="Headshot of Brendan">
+                <img class="headshot" src="../assets/Images/Brendan_Jefferson.jpg" alt="Headshot of Brendan">
                 <p><strong>Brendan J.</strong></p>
                 <p>“We’re not just testing wells; we’re rebuilding confidence and community health."
                 </p>
             </li>
             <li id="Christine">
-                <img class="headshot" src="/assets/Images/Christine_Chee.jpg" alt="Headshot of Christine">
+                <img class="headshot" src="../assets/Images/Christine_Chee.jpg" alt="Headshot of Christine">
                 <p><strong>Christine C.</strong></p>
                 <p>“Our work reminds me that clean water isn’t a luxury; it’s a human right. Every filter we install is one less family worrying about their next glass.”</p>
             </li>
             <li id="Jessica">
-                <img class="headshot" src="/assets/Images/Jessica_Cruz.jpg" alt="Headshot of Jessica">
+                <img class="headshot" src="../assets/Images/Jessica_Cruz.jpg" alt="Headshot of Jessica">
                 <p><strong>Jessica C.</strong></p>
                 <p>“Seeing residents test their water for the first time and learn it’s safe again—it’s the best part of what we do.”</p>
             </li>
             <li id="Marilyn">
-                <img class="headshot" src="/assets/Images/Marilyn_Castro.jpg" alt="Headshot of Marilyn">
+                <img class="headshot" src="../assets/Images/Marilyn_Castro.jpg" alt="Headshot of Marilyn">
                 <p><strong>Marilyn C.</strong></p>
                 <p>“The Flow State started as an idea about equity. It became a movement about dignity and connection.”</p>
             </li>
             <li id="Tommy">
-                <img class="headshot" src="/assets/Images/Tommy-Nam_Nguyen.jpg" alt="Headshot of Tommy">
+                <img class="headshot" src="../assets/Images/Tommy-Nam_Nguyen.jpg" alt="Headshot of Tommy">
                 <p><strong>Tommy N.</strong></p>
                 <p>“We’ve seen firsthand how one small change, like a clean water source can ripple through an entire town.”</p>
             </li>
