Page styling edits

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Zalando+Sans+SemiExpanded:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+
     <!-- CSS Link -->
     <link rel="stylesheet" href="assets/css/styles.css">
 
@@ -34,7 +39,7 @@
         <!-- Picture with motto -->
         <section class = "home-container motto">
             <div class = "motto-overlay">
-                <p>“When Water Flows, Communities Thrive.”</p>
+                <p>“When Water Flows, Communities Thrive”</p>
             </div>
         </section>
 
@@ -50,11 +55,11 @@
         </section>
 
         <!-- Get Involved -->
-        <!-- <section class = "home-container get-involved">
+        <section class = "home-container get-involved">
             <div class = "get-involved-overlay">
                 <p>“Ways to get get-involved</p>
             </div>
-        </section> -->
+        </section>
 
         <div class = "home-container spacing"></div>
 
@@ -65,7 +70,8 @@
             <section class = "footer footer-logo">
                 <h1>The Flow State</h1>
                 <!-- Tagline -->
-                <h5>"Keeping NC in Flow"</h5>
+                <!-- <h5>"Keeping NC in Flow"</h5> -->
+                <h5>“When Water Flows, Communities Thrive”</h5>
             </section>
 
             <section class = "footer footer-pages">
