complete basics layout pt1

--- a/pages/resource-pfas.html
+++ b/pages/resource-pfas.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resource Page</title>
-    <link rel="stylesheet" href="../assets/css/resources.css">
+    <title>PFAS</title>
+    <link rel="stylesheet" href="../assets/css/resource-pfas.css">
 </head>
-
 <body>
     <header>
         <nav class = "nav nav-top">
@@ -24,38 +23,7 @@
     </header>
 
 
-  <main>
-    <div class="threearticle-container">
-
-      <div class="BoxArticle">
-        <img src="../assets/Images/pfas.png" alt="What is a PfA ? logo">
-        <h3 class="ArticleHeading">Article Name</h3>
-        <p>Short description for article 1</p>
-        <a href="../pages/resource-pfas.html">
-        <button class="Abt">Learn More > </button>
-        </a>
-      </div>
-
-      <div class="BoxArticle">
-        <img src="../assets/Images/runnoffs.png" alt="Agriculture and Urban Runnoff Logo">
-        <h3 class="ArticleHeading">Article Name</h3>
-        <p>Short description for article 2</p>
-        <a href="../pages/resource-runoff.html">
-        <button class="Abt">Learn More > </button>
-        </a>
-      </div>
-
-      <div class="BoxArticle">
-        <img src="../assets/Images/waterplant.png" alt="What is a Water Treatment Plant Logo?">
-        <h3 class="ArticleHeading">Article Name</h3>
-        <p>Short description for article 3.</p>
-        <a href="../pages/resource-treatment.html">
-        <button class="Abt">Learn More > </button>
-        </a>
-      </div>
-
-    </div>
-  </main>
+    <main>
 
 
 
@@ -63,6 +31,7 @@
 
 
 
+    </main>
 
 
 
@@ -87,8 +56,6 @@
         </section>
       </div>
 
-    </footer>
-
-
+    </footer>   
 </body>
 </html>
