--- a/pages/resource-treatment.html
+++ b/pages/resource-treatment.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resource Page</title>
-    <link rel="stylesheet" href="../assets/css/resources.css">
+    <title>Water Treatment Plants</title>
+    <link rel="stylesheet" href="../assets/css/resource-treatment.css">
 </head>
 
 <body>
@@ -24,38 +24,8 @@
     </header>
 
 
-  <main>
-    <div class="threearticle-container">
 
-      <div class="BoxArticle">
-        <img src="../assets/Images/pfas.png" alt="What is a PfA ? logo">
-        <h3 class="ArticleHeading">Article Name</h3>
-        <p>Short description for article 1</p>
-        <a href="../pages/resource-pfas.html">
-        <button class="Abt">Learn More > </button>
-        </a>
-      </div>
-
-      <div class="BoxArticle">
-        <img src="../assets/Images/runnoffs.png" alt="Agriculture and Urban Runnoff Logo">
-        <h3 class="ArticleHeading">Article Name</h3>
-        <p>Short description for article 2</p>
-        <a href="../pages/resource-runoff.html">
-        <button class="Abt">Learn More > </button>
-        </a>
-      </div>
-
-      <div class="BoxArticle">
-        <img src="../assets/Images/waterplant.png" alt="What is a Water Treatment Plant Logo?">
-        <h3 class="ArticleHeading">Article Name</h3>
-        <p>Short description for article 3.</p>
-        <a href="../pages/resource-treatment.html">
-        <button class="Abt">Learn More > </button>
-        </a>
-      </div>
-
-    </div>
-  </main>
+    <main>
 
 
 
@@ -63,6 +33,9 @@
 
 
 
+
+      
+    </main>
 
 
 
@@ -86,8 +59,12 @@
           <h2>Find us on...</h2>
         </section>
       </div>
-
     </footer>
+
+
+
+
+
 
 
 </body>
