--- a/pages/About.html
+++ b/pages/About.html
@@ -25,7 +25,7 @@
             <a href = "../TheFlowState/pages/About.html">About</a>
             <a href = "connect.html">Connect</a>
             <a href = "donation.html">Donate</a>
-            <a href = "resources.html]">Resources</a>
+            <a href = "resources.html">Resources</a>
         </nav>
 
     </header>
@@ -116,10 +116,10 @@
 
             <section class = "footer footer-pages">
                 <h2>Pages</h2>
-                <a href = "../TheFlowState/pages/About.html">About</a>
-                <a href = "../TheFlowState/pages/connect.html">Connect</a>
-                <a href = "../TheFlowState/pages/donation.html">Donate</a>
-                <a href = "../TheFlowState/pages/resources.html]">Resources</a>
+                <a href = "About.html">About</a>
+                <a href = "connect.html">Connect</a>
+                <a href = "donation.html">Donate</a>
+                <a href = "resources.html">Resources</a>
             </section>
 
             <section class = "footer footer-socials">
