--- a/pages/connect.html
+++ b/pages/connect.html
@@ -3,28 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Zalando+Sans+SemiExpanded:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+
+
     <title>Connect/Get Involved</title>
+    
     <link
       rel="icon"
       type="TheFlowState Custom Tab Icon"
-      href="/assets/Images/TheFlowState.png"
+      href="../assets/Images/TheFlowState.png"
     />
-    <link rel="stylesheet" href="/assets/css/styles.css" />
+
+    <link rel="stylesheet" href="../assets/css/styles.css" />
+
   </head>
   <body>
     <header>
       <nav class="nav nav-top">
-        <a class="logo-btn" href="index.html">
-          <img src="/assets/Images/TheFlowState.png" alt="Home" />
+        <a class="logo-btn" href="../index.html">
+          <img src="../assets/Images/TheFlowState.png" alt="Home" />
           <p>The Flow State</p>
         </a>
       </nav>
 
       <nav class="nav nav-bottom">
-        <a href="pages/About.html">About</a>
-        <a href="pages/connect.html">Connect</a>
-        <a href="pages/donation.html">Donate</a>
-        <a href="pages/resources.html">Resources</a>
+        <a href="About.html">About</a>
+        <a href="connect.html">Connect</a>
+        <a href="donation.html">Donate</a>
+        <a href="resources.html">Resources</a>
       </nav>
     </header>
 
@@ -78,10 +88,10 @@
 
         <section class="footer footer-pages">
           <h2>Pages</h2>
-          <a href="pages/About.html">About</a>
-          <a href="pages/connect.html">Connect</a>
-          <a href="pages/donation.html">Donate</a>
-          <a href="pages/resources.html">Resources</a>
+          <a href="About.html">About</a>
+          <a href="connect.html">Connect</a>
+          <a href="donation.html">Donate</a>
+          <a href="resources.html">Resources</a>
         </section>
 
         <section class="footer footer-socials">
