--- a/pages/resource-runoff.html
+++ b/pages/resource-runoff.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Agriculture And Urban Runnoff</title>
     <link rel="stylesheet" href="../assets/css/resource-runoff.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Zalando+Sans+SemiExpanded:ital,wght@0,200..900;1,200..900&display=swap">
 </head>
 <body>
     <header>
         <nav class = "nav nav-top">
-            <a class = "logo-btn" href = "index.html">
-                <img src="../TheFlowState/assets/Images/TheFlowState.png" alt = "Home"></a>
+            <a class = "logo-btn" href = "../TheFlowState/index.html">
+              <img src="../assets/Images/TheFlowState.png" alt = "Home">
+              <p>The Flow State</p>
+            </a>
         </nav>
 
         <nav class = "nav nav-bottom">
