--- a/pages/resources.html
+++ b/pages/resources.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resource Page</title>
     <link rel="stylesheet" href="../assets/css/resources.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Zalando+Sans+SemiExpanded:ital,wght@0,200..900;1,200..900&display=swap">
 </head>
 
 <body>
     <header>
         <nav class = "nav nav-top">
-            <a class = "logo-btn" href = "index.html">
-                <img src="../TheFlowState/assets/Images/TheFlowState.png" alt = "Home"></a>
+            <a class = "logo-btn" href = "../TheFlowState/index.html">
+              <img src="../assets/Images/TheFlowState.png" alt = "Home">
+              <p>The Flow State</p>
+            </a>
         </nav>
 
         <nav class = "nav nav-bottom">
@@ -57,6 +60,21 @@
     </div>
   </main>
 
+  <section>
+
+
+
+
+  </section>
+
+
+
+  <section>
+
+
+
+
+  </section>
 
 
 
@@ -66,28 +84,29 @@
 
 
 
-    <footer>
-      <div class = "footer-flexbox">
-        <section class = "footer footer-logo">
-          <h1>The Flow State</h1>
-          <!-- Tagline -->
-          <h5>"Keeping NC in Flow"</h5>
-        </section>
 
-        <section class = "footer footer-pages">
-          <h2>Pages</h2>
-          <a href = "pages/About.html">About</a>
-          <a href = "pages/connect.html">Connect</a>
-          <a href = "pages/donation.html">Donate</a>
-          <a href = "pages/resources.html">Resources</a>
-        </section>
+  <footer>
+    <div class = "footer-flexbox">
+      <section class = "footer footer-logo">
+        <h1>The Flow State</h1>
+        <!-- Tagline -->
+        <h5>"Keeping NC in Flow"</h5>
+      </section>
 
-        <section class = "footer footer-socials">
-          <h2>Find us on...</h2>
-        </section>
-      </div>
+      <section class = "footer footer-pages">
+        <h2>Pages</h2>
+        <a href = "pages/About.html">About</a>
+        <a href = "pages/connect.html">Connect</a>
+        <a href = "pages/donation.html">Donate</a>
+        <a href = "pages/resources.html">Resources</a>
+      </section>
 
-    </footer>
+      <section class = "footer footer-socials">
+        <h2>Find us on...</h2>
+      </section>
+    </div>
+
+  </footer>
 
 
 </body>
