--- a/pages/donation.html
+++ b/pages/donation.html
@@ -24,8 +24,20 @@
   </header>
 
   <body>
+    <div class="donation-banner">
+      <img
+        src="https://healthycampus.ucr.edu/sites/default/files/hc_built-environment-banner_healthy-beverage-Initiative-.JPG"
+        class="donation-banner-img"
+      />
+    </div>
+
     <section class="donation-section">
-      <p class="donation-paragraph">Please consider making a donation</p>
+      <p class="donation-paragraph">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus
+        quidem natus molestiae quod atque animi veniam eligendi repellat? Eos
+        beatae repudiandae cupiditate delectus quod quam possimus exercitationem
+        ducimus corrupti quos?
+      </p>
 
       <div class="donation-frequency">
         <button
@@ -92,6 +104,23 @@
       <div class="donation-submit">
         <button id="donate-button" class="donate-button">Donate</button>
       </div>
+    </section>
+
+    <section class="donation-info">
+      <h3>Additional Information</h3>
+      <hr class="info-divider" />
+      <p>
+        <ul>
+          <li>Your donations are tax-deductible.</li>
+          <li>
+            We use secure payment processing to ensure your information is
+            safe.
+          </li>
+          <li>
+            You can change or cancel your recurring donations at any time. Please email us for assistance at ...
+          </li>
+      </p>
+      <hr class="info-divider" />
     </section>
 
     <script src="../assets/js/donation.js"></script>
