--- a/pages/donation.html
+++ b/pages/donation.html
@@ -110,7 +110,7 @@
       <h3>Additional Information</h3>
       <hr class="info-divider" />
       <p>
-        <ul>
+        <ul class="info-list">
           <li>Your donations are tax-deductible.</li>
           <li>
             We use secure payment processing to ensure your information is
@@ -120,7 +120,6 @@
             You can change or cancel your recurring donations at any time. Please email us for assistance at ...
           </li>
       </p>
-      <hr class="info-divider" />
     </section>
 
     <script src="../assets/js/donation.js"></script>
