updated css for inner links

--- a/pages/resources.html
+++ b/pages/resources.html
@@ -60,20 +60,25 @@
     </div>
   </main>
 
-  <section>
+
+  <section class="FirstStory">
+    <h2> </h2>
+    <p>
 
 
 
-
+    </p>
   </section>
 
 
 
-  <section>
+  <section class="SecondStory">
+    <h2></h2>
+    <p>
 
 
 
-
+    </p>
   </section>
 
 
