--- a/pages/connect.html
+++ b/pages/connect.html
@@ -71,7 +71,7 @@
         <div class="contact-right">
           <img
             id="contact-page-main-img"
-            src="/assets/Images/Contact-Page-Get-Involved.png"
+            src="../assets/Images/Contact-Page-Get-Involved.png"
             alt="Person passing water in a field"
           />
         </div>
