--- a/pages/resource-pfas.html
+++ b/pages/resource-pfas.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Zalando+Sans+SemiExpanded:ital,wght@0,200..900;1,200..900&display=swap">
 </head>
-<body class="Pfasbody">
+<body class="Resbody">
     <header>
         <nav class = "nav nav-top">
             <a class = "logo-btn" href = "../TheFlowState/index.html">
@@ -25,8 +25,11 @@
 
     </header>
 
+    
+    <article class="ResArticle">
 
-    <article class="RecArticle">
+      <button class="Resprev" onclick="history.back()"> <  Previous Page </button>
+
       <h1>What Are PFAS? Understanding Forever<br> Chemicals, Regulations and More </h1>
 
       <P>
@@ -34,15 +37,15 @@
 
 
 
-      <h3 class="Recat">What Should We Know About PFAS?</h3>
+      <h3 class="Resat">What Should We Know About PFAS?</h3>
 
       <p>PFAS are found worldwide, and most people have been exposed to at least low levels of these <br>chemicals. Current research suggests that exposure to certain types or higher concentrations of <br>PFAS may be linked to various health concerns, including increased cholesterol, high blood <br>pressure, weakened immune functions, reduced fertility, and other potential effects. Ongoing <br>studies continue to examine how different PFAS compounds affect the body, how exposure levels <br>correlate with health outcomes, and what long-term, low-level exposure may mean for individuals<br> over time. Scientists are still working to better understand the full scope of health risks associated <br>with these persistent chemicals.</p>
 
 
 
-      <h3 class="Recat">What can we do?</h3>
+      <h3 class="Resat">What can we do?</h3>
 
-      <p>Although completely eliminating PFAS exposure is unlikely, individuals can take meaningful steps to <br>reduce personal risk. Contaminated drinking water is currently considered one of the most significant <br>exposure pathways. To better understand your own risk, consider testing your water. Local health <br>departments, water utilities, or environmental protection agencies can provide certified testing kits <br>that allow you to collect samples and send them to an accredited laboratory. Because PFAS require a <br>highly sensitive analytical method—liquid chromatography–tandem mass spectrometry (LC-MS/MS)<br>—simple at home test kits cannot accurately detect them. While awaiting results, or as a general <br>precaution, using a water filtration system can help. Activated carbon filters and reverse osmosis <br>systems are the most effective at reducing PFAS levels, and several water pitchers are specifically <br>designed to filter PFAS. In addition, reducing your use of PFAS-containing products can help limit <br>exposure. Avoid items containing PTFE or other fluorinated chemicals, and consider choosing long-<br>lasting, reusable products instead of disposable ones.</P>
+      <p>Although completely eliminating PFAS exposure is unlikely, individuals can take meaningful steps to <br>reduce personal risk. Contaminated drinking water is currently considered one of the most significant <br>exposure pathways. To better understand your own risk, consider testing your water. Local health <br>departments, water utilities, or environmental protection agencies can provide certified testing kits <br>that allow you to collect samples and send them to an accredited laboratory. Because PFAS require a <br>highly sensitive analytical method—liquid chromatography–tandem mass spectrometry (LC-MS/MS)<br>—simple at home test kits cannot accurately detect them. While awaiting results, or as a general <br>precaution, using a water filtration system can help. Activated carbon filters and reverse osmosis <br>systems are the most effective at reducing PFAS levels, and several water pitchers are specifically <br>designed to filter PFAS. In addition, reducing your use of PFAS-containing products can help limit <br>exposure. Avoid items containing PTFE or other fluorinated chemicals, and consider choosing long-<br>lasting, reusable products instead of disposable ones.</p>
 
     </article>
 
