--- a/pages/resources.html
+++ b/pages/resources.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resource Page</title>
+    <title>Resources</title>
+    <link rel="icon" type="The Flowstate Custom Tab Icon" href="../assets/Images/TheFlowState.png">
     <link rel="stylesheet" href="../assets/css/resources.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Zalando+Sans+SemiExpanded:ital,wght@0,200..900;1,200..900&display=swap">
 </head>
@@ -30,30 +31,30 @@
   <main>
     <div class="threearticle-container">
 
-      <div class="BoxArticle">
+      <div class="PBoxArticle">
         <img src="../assets/Images/pfas.png" alt="What is a PfA ? logo">
-        <h3 class="ArticleHeading">Article Name</h3>
-        <p>Short description for article 1</p>
+        <h3 class="PArticleHeading">What is PFAS?</h3>
+        <p>PFAS, often called “forever chemicals,” are persistent substances found in everyday products and the environment, raising growing concerns about health and safety.</p>
         <a href="../pages/resource-pfas.html">
-        <button class="Abt">Learn More > </button>
+        <button class="PAbt">Learn More  </button>
         </a>
       </div>
 
-      <div class="BoxArticle">
+      <div class="PBoxArticle">
         <img src="../assets/Images/runnoffs.png" alt="Agriculture and Urban Runnoff Logo">
-        <h3 class="ArticleHeading">Article Name</h3>
-        <p>Short description for article 2</p>
+        <h3 class="PArticleHeading">Understanding Agricultural and Urban Runoff</h3>
+        <p>Agricultural and urban runoff are leading contributors to water pollution, affecting ecosystems, drinking water, and community health.</p>
         <a href="../pages/resource-runoff.html">
-        <button class="Abt">Learn More > </button>
+        <button class="PAbt">Learn More  </button>
         </a>
       </div>
 
-      <div class="BoxArticle">
+      <div class="PBoxArticle">
         <img src="../assets/Images/waterplant.png" alt="What is a Water Treatment Plant Logo?">
-        <h3 class="ArticleHeading">Article Name</h3>
+        <h3 class="PArticleHeading">Article Name</h3>
         <p>Short description for article 3.</p>
         <a href="../pages/resource-treatment.html">
-        <button class="Abt">Learn More > </button>
+        <button class="PAbt">Learn More  </button>
         </a>
       </div>
 
