--- a/pages/donation.html
+++ b/pages/donation.html
@@ -3,30 +3,43 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Donation</title>
+    <link rel="stylesheet" href="../assets/css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Zalando+Sans+SemiExpanded:ital,wght@0,200..900;1,200..900&display=swap"
+      rel="stylesheet"
+    />
+    <title>Donation | The Flow State</title>
+    <link
+      rel="icon"
+      type="TheFlowState Custom Tab Icon"
+      href="../assets/Images/TheFlowState.png"
+    />
 
     <link rel="stylesheet" href="../assets/css/donation.css" />
     <link rel="stylesheet" href="../assets/css/styles.css" />
   </head>
 
-  <header>
-    <nav class="nav nav-top">
-      <a class="logo-btn" href="../index.html">
-        <img src="../assets/images/TheFlowState.png" alt="Home"
-      /></a>
-    </nav>
-    <nav class="nav nav-bottom">
-      <a href="../pages/About.html">About</a>
-      <a href="../pages/connect.html">Connect</a>
-      <a href="../pages/donation.html">Donate</a>
-      <a href="../pages/resources.html">Resources</a>
-    </nav>
-  </header>
-
   <body>
+    <header>
+      <nav class="nav nav-top">
+        <a class="logo-btn" href="../index.html">
+          <img src="../assets/Images/TheFlowState.png" alt="Home" />
+          <p>The Flow State</p>
+        </a>
+      </nav>
+
+      <nav class="nav nav-bottom">
+        <a href="About.html">About</a>
+        <a href="connect.html">Connect</a>
+        <a href="donation.html">Donate</a>
+        <a href="resources.html">Resources</a>
+      </nav>
+    </header>
     <div class="donation-banner">
       <img
-        src="https://healthycampus.ucr.edu/sites/default/files/hc_built-environment-banner_healthy-beverage-Initiative-.JPG"
+        src="../assets/Images/donation-waterbanner.png"
         class="donation-banner-img"
       />
     </div>
@@ -119,13 +132,59 @@
           The Flow State was founded in 2025 by a dedicated group of NC
           residents to fight the lack of potable water severely impacting local
           health. Learn more
-          <a
-            href="../pages/About.html#:~:text=scaling%20what%20works.-,Meet%20Our%20Team,-Brendan%20J."
-            >here</a
-          >.
+          <a href="../pages/About.html">here</a>.
         </li>
       </ul>
     </section>
+
+    <div id="billing" class="billing">
+      <div class="billing-content">
+        <h2>Billing Information</h2>
+        <form id="billing-form">
+          <label>
+            Name on Card:
+            <input type="text" id="billing-name" required />
+          </label>
+          <label>
+            Billing Address:
+            <input type="text" id="billing-address" required />
+          </label>
+          <label>
+            Card Number:
+            <input
+              type="text"
+              id="billing-card"
+              minlength="14"
+              maxlength="16"
+              required
+            />
+          </label>
+          <label>
+            CVV:
+            <input
+              type="text"
+              id="billing-cvv"
+              minlength="3"
+              maxlength="4"
+              required
+            />
+          </label>
+          <label>
+            Expiration Date (MM/YY):
+            <input
+              type="text"
+              id="billing-exp"
+              minlength="3"
+              maxlength="4"
+              placeholder="MM/YY"
+              required
+            />
+          </label>
+          <button type="submit">Submit Payment</button>
+          <button type="button" id="close-billing">Cancel</button>
+        </form>
+      </div>
+    </div>
 
     <script src="../assets/js/donation.js"></script>
   </body>
