complete resource page

--- a/pages/resources.html
+++ b/pages/resources.html
@@ -62,31 +62,39 @@
   </main>
 
 
-  <section class="FirstStory">
-    <h2> </h2>
-    <p>
 
-
-
-    </p>
+  <section class="ResPdf">
+    <div class="RSText">
+      <h2>The Safe Drinking Water Act</h2>
+      <p>The Safe Drinking Water Act (SDWA) is the primary law that protects public drinking water in the United States. It sets standards for <br>water quality, requires regular testing, and regulates how public water systems treat and manage drinking water. The act also authorizes<br> the EPA to oversee states and water suppliers to ensure water remains safe. You can access the full document using the link provided<br> below.</p>
+      <a class="Rpdflink" href="https://www.epa.gov/sites/default/files/2015-04/documents/epa816f04030.pdf" target="_blank">EPA's Safe Drinking Water Act</a>
+    </div>
   </section>
 
 
+  <section class="ResStory">
+    <div class="RSText">
+      <h2>Brunswisk County</h2>
+      <p>These water issues are not just national concerns—they are actively affecting <br>communities such as Brunswick County, North Carolina. Recent testing has<br> shown that portions of the county’s drinking water contain elevated levels of <br>PFAS, including compounds that are not yet fully regulated at the federal <br>level. Local utilities are working to upgrade their treatment systems, including <br>the addition of advanced filtration technologies, to reduce these “forever <br>chemicals” and meet new safety guidelines. The county’s population growth <br>has also placed additional pressure on water supply and infrastructure,<br> leading to seasonal conservation alerts and a greater reliance on treatment<br> facilities to ensure safe &reliable water to the people.</p>
+    </div>
 
-  <section class="SecondStory">
-    <h2></h2>
-    <p>
-
-
-
-    </p>
+    <div class="RStorypic">
+      <img src="../assets/Images/bruncounty.png" alt="Image of Brunswick County">
+    </div>
   </section>
 
 
+  <section class="ResStorytwo">
+    <div class="RSText">
+      <h2>Robeson County</h2>
+      <p>Robeson County faces its own water-quality challenges, many of which are<br> linked to PFAS contamination. Recent testing has identified elevated PFAS <br>levels in parts of the county’s water system and in areas near landfills and <br>industrial sites. The region’s frequent flooding and extensive agricultural <br>activity also make it especially vulnerable to runoff, allowing fertilizers, waste, <br>and other pollutants to enter nearby waterways. Combined with aging <br>infrastructure in some communities, these factors underscore the importance<br> of reliable water testing and strong treatment practices to ensure long-term<br> water safety.</p>
+    </div>
 
+    <div class="RStorypic">
+      <img src="../assets/Images/Robeson-Lumb.png" alt="Image of Robeson County">
 
-
-
+    </div>
+  </section>
 
 
 
