--- a/pages/connect.html
+++ b/pages/connect.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Zalando+Sans+SemiExpanded:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Zalando+Sans+SemiExpanded:ital,wght@0,200..900;1,200..900&display=swap"
+      rel="stylesheet"
+    />
 
     <title>Connect/Get Involved</title>
-    
+
     <link
       rel="icon"
       type="TheFlowState Custom Tab Icon"
@@ -19,7 +21,7 @@
     />
 
     <link rel="stylesheet" href="../assets/css/styles.css" />
-
+    <script src="../assets/js/connect.js"></script>
   </head>
   <body>
     <header>
@@ -40,7 +42,11 @@
 
     <div class="contact-body">
       <div class="contact-container">
-        <form action="" class="contact-left">
+        <form
+          action="../pages/connect-Thank-You.html"
+          method="GET"
+          class="contact-left"
+        >
           <div class="contact-left-title">
             <h2>Get Involved</h2>
             <hr />
@@ -77,7 +83,7 @@
         </div>
       </div>
     </div>
-    <!-- FOOTER MOVED OUTSIDE contact-body -->
+    
     <footer>
       <div class="footer-flexbox">
         <section class="footer footer-logo">
