--- a/pages/donation.html
+++ b/pages/donation.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../assets/css/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,8 +16,8 @@
       href="../assets/Images/TheFlowState.png"
     />
 
-    <link rel="stylesheet" href="../assets/css/donation.css" />
     <link rel="stylesheet" href="../assets/css/styles.css" />
+    <link rel="stylesheet" href="../assets/css/donation.css" />
   </head>
 
   <body>
@@ -28,9 +27,15 @@
           <img src="../assets/Images/TheFlowState.png" alt="Home" />
           <p>The Flow State</p>
         </a>
+        <!-- Hamburger button -->
+        <button class="hamburger" id="hamburger" aria-label="Menu">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
       </nav>
 
-      <nav class="nav nav-bottom">
+      <nav class="nav nav-bottom" id="nav-menu">
         <a href="About.html">About</a>
         <a href="connect.html">Connect</a>
         <a href="donation.html">Donate</a>
