home mobile breakpoint

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <!-- JS Link -->
-    <script src="assets/js/scripts.js"></script>
+    <script src = "assets/js/scripts.js" defer></script>
 
     <header>
         <nav class = "nav nav-top">
@@ -33,10 +33,10 @@
             </a>
             
             <!-- Unicode hamburger -->
-            <button class="hamburger">&#9776;</button>
+            <button id = "hamberger-nav" class="hamburger">&#9776;</button>
         </nav>
 
-        <nav class = "nav nav-bottom">
+        <nav id="nav-menu" class = "nav nav-bottom">
             <a href = "pages/About.html">About</a>
             <a href = "pages/connect.html">Connect</a>
             <a href = "pages/donation.html">Donate</a>
