update before main pull

--- a/pages/resources.html
+++ b/pages/resources.html
@@ -16,6 +16,11 @@
               <img src="../assets/Images/TheFlowState.png" alt = "Home">
               <p>The Flow State</p>
             </a>
+            <button class="hamburger" id="hamburger" aria-label="Menu">
+              <span></span>
+              <span></span>
+              <span></span>
+            </button>
         </nav>
 
         <nav class = "nav nav-bottom">
