--- a/pages/connect-Thank-You.html
+++ b/pages/connect-Thank-You.html
@@ -56,7 +56,7 @@
         <div class="footer-flexbox">
             <section class="footer footer-logo">
                 <h1>The Flow State</h1>
-                <h5>"Keeping NC in Flow"</h5>
+                <h5>“When Water Flows, Communities Thrive”</h5>
             </section>
 
             <section class="footer footer-pages">
@@ -69,7 +69,15 @@
             </section>
 
             <section class="footer footer-socials">
-                <h2>Find us on...</h2>
+              <h2>Find us on...</h2>
+                <div class = "socials-container">
+                    <a class = "instagram-btn" href = "https://www.facebook.com/">
+                        <img src = "../assets/Images/Instagram.png" alt = "Instagram">
+                    </a>
+                    <a class = "fb-btn" href = "https://www.instagram.com/">
+                        <img src = "../assets/Images/FB.png" alt = "Facebook">
+                    </a>
+                </div>
             </section>
         </div>
     </footer>
