Fixed Logo Link

--- a/pages/donation.html
+++ b/pages/donation.html
@@ -27,7 +27,7 @@
 
     <header>
       <nav class="nav nav-top">
-        <a class="logo-btn" href="index.html">
+        <a class="logo-btn" href="../index.html">
           <img src="../assets/Images/TheFlowState.png" alt="Home" />
           <p>The Flow State</p>
         </a>
