--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <!-- CSS Link -->
     <link rel="stylesheet" href="../TheFlowState/assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
 
     <title>The Flow State</title>
 </head>
