--- a/pages/connect.html
+++ b/pages/connect.html
@@ -22,6 +22,7 @@
 
     <link rel="stylesheet" href="../assets/css/styles.css" />
     <script src="../assets/js/connect.js"></script>
+    <script src = "../assets/js/scripts.js" defer></script>
   </head>
   <body>
     <header>
@@ -30,9 +31,12 @@
           <img src="../assets/Images/TheFlowState.png" alt="Home" />
           <p>The Flow State</p>
         </a>
+
+        <!-- Unicode hamburger -->
+        <button id = "hamberger-nav" class="hamburger">&#9776;</button>
       </nav>
 
-      <nav class="nav nav-bottom">
+      <nav id="nav-menu" class = "nav nav-bottom">
         <a href="About.html">About</a>
         <a href="connect.html">Connect</a>
         <a href="donation.html">Donate</a>
