--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
             <section class = "footer footer-socials">
                 <h2>Find us on...</h2>
                 <div class = "socials-container">
-                    <a class = "instagram-btn" href = "https://www.facebook.com/">
+                    <a class = "instagram-btn" href = "https://www.instagram.com/">
                         <img src = "../TheFlowState/assets/Images/Instagram.png" alt = "Instagram">
                     </a>
-                    <a class = "fb-btn" href = "https://www.instagram.com/">
+                    <a class = "fb-btn" href = "https://www.facebook.com/">
                         <img src = "../TheFlowState/assets/Images/FB.png" alt = "Facebook">
                     </a>
 
