--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,7 @@
     <link
       rel="icon"
       type="TheFlowState Custom Tab Icon"
-      href="../TheFlowState/assets/Images/TheFlowState.png"
+      href="../assets/Images/TheFlowState.png"
     />
 
     <!-- Fonts -->
@@ -17,19 +17,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Zalando+Sans+SemiExpanded:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
 
     <!-- CSS Link -->
-    <base href="/TheFlowState/">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
 
     <title>The Flow State</title>
 </head>
 <body>
     <!-- JS Link -->
-    <script src = "assets/js/scripts.js" defer></script>
+    <script src = "../assets/js/scripts.js" defer></script>
 
     <header>
         <nav class = "nav nav-top">
             <a class = "logo-btn" href = "index.html">
-                <img src="assets/Images/TheFlowState.png" alt = "Home">
+                <img src="../assets/Images/TheFlowState.png" alt = "Home">
                 <p>The Flow State</p>
             </a>
             
@@ -38,10 +37,10 @@
         </nav>
 
         <nav id="nav-menu" class = "nav nav-bottom">
-            <a href = "pages/About.html">About</a>
-            <a href = "pages/connect.html">Connect</a>
-            <a href = "pages/donation.html">Donate</a>
-            <a href = "pages/resources.html">Resources</a>
+            <a href = "../pages/About.html">About</a>
+            <a href = "../pages/connect.html">Connect</a>
+            <a href = "../pages/donation.html">Donate</a>
+            <a href = "../pages/resources.html">Resources</a>
         </nav>
 
     </header>
@@ -63,7 +62,7 @@
 
                 <p>Across North Carolina, several communities still struggle to access safe and reliable drinking water. At The Flow State, we’re committed to changing that with one drop, one home, one community at a time. As a local nonprofit organization, we create our digital hub for residents and supporters. We connect people to trusted resources, volunteer opportunities, and transparent ways to give back. Because we believe that when water flows, communities thrive.</p>
                 
-                <a class = "about-overlay about-btn" href = "pages/About.html">Learn More</a>
+                <a class = "about-overlay about-btn" href = "../pages/About.html">Learn More</a>
             </div>
         </section>
 
@@ -79,10 +78,10 @@
                         <section class = "left connect" >
                             <h3>Connect with Us!</h3>
                             <p>Want to help bring clean water to every community?</p>
-                            <a href = "pages/connect.html">Connect</a>
+                            <a href = "../pages/connect.html">Connect</a>
                         </section>
                         <section class = "right connect" >
-                            <img src = "assets/Images/team-hands.jpg">
+                            <img src = "../assets/Images/team-hands.jpg">
                         </section>
                     </div>
 
@@ -91,10 +90,10 @@
                         <section class = "left donate" >
                             <h3>Donations</h3>
                             <p>When you give, hope flows. Every dollar helps bring safe, reliable water to North Carolina communities in need. Your support fuels local projects, empowers volunteers, and ensures every family has access to clean water.</p>
-                            <a href = "pages/donation.html">Donate</a>
+                            <a href = "../pages/donation.html">Donate</a>
                         </section>
                         <section class = "right donate" >
-                            <img src = "assets/Images/faucet.jpg">
+                            <img src = "../assets/Images/faucet.jpg">
                         </section>
                     </div>
 
@@ -103,10 +102,10 @@
                         <section class = "left resources" >
                             <h3>Resources</h3>
                             <p>Find trusted tools and local support. From water testing and conservation tips to community programs, our resource hub connects you to the information and services that matter most.</p>
-                            <a href = "pages/resources.html">Resources</a>
+                            <a href = "../pages/resources.html">Resources</a>
                         </section>
                         <section class = "right resources" >
-                            <img src = "assets/Images/rain-hand.jpg">
+                            <img src = "../assets/Images/rain-hand.jpg">
                         </section>
                     </div>
 
@@ -142,20 +141,20 @@
             <section class = "footer footer-pages">
                 <h2>Pages</h2>
                 <a href = "index.html">Home</a>
-                <a href = "pages/About.html">About</a>
-                <a href = "pages/connect.html">Connect</a>
-                <a href = "pages/donation.html">Donate</a>
-                <a href = "pages/resources.html">Resources</a>
+                <a href = "../pages/About.html">About</a>
+                <a href = "../pages/connect.html">Connect</a>
+                <a href = "../pages/donation.html">Donate</a>
+                <a href = "../pages/resources.html">Resources</a>
             </section>
 
             <section class = "footer footer-socials">
                 <h2>Find us on...</h2>
                 <div class = "socials-container">
                     <a class = "instagram-btn" href = "https://www.instagram.com/">
-                        <img src = "assets/Images/Instagram.png" alt = "Instagram">
+                        <img src = "../assets/Images/Instagram.png" alt = "Instagram">
                     </a>
                     <a class = "fb-btn" href = "https://www.facebook.com/">
-                        <img src = "assets/Images/FB.png" alt = "Facebook">
+                        <img src = "../assets/Images/FB.png" alt = "Facebook">
                     </a>
 
                 </div>
