--- a/pages/resources.html
+++ b/pages/resources.html
@@ -3,27 +3,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resources</title>
+
+    <!-- Page Icon on Header-->
     <link rel="icon" type="The Flowstate Custom Tab Icon" href="../assets/Images/TheFlowState.png">
+
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Zalando+Sans+SemiExpanded:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="../assets/css/styles.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Zalando+Sans+SemiExpanded:ital,wght@0,200..900;1,200..900&display=swap">
+
+    <title>Resources</title>
+
 </head>
 
 <body>
-    <header>
-        <nav class = "nav nav-top">
-            <a class = "logo-btn" href = "../index.html">
-                <img src="../assets/Images/TheFlowState.png" alt = "Home">
-                <p>The Flow State</p>
-            </a>
-        </nav>
+    <!-- JS Link -->
+    <script src = "../assets/js/scripts.js" defer></script>
+    <!--  -->
 
-        <nav class = "nav nav-bottom">
-            <a href = "About.html">About</a>
-            <a href = "connect.html">Connect</a>
-            <a href = "donation.html">Donate</a>
-            <a href = "resources.html">Resources</a>
-        </nav>
+    <header>
+      <nav class = "nav nav-top">
+        <a class = "logo-btn" href = "index.html">
+          <img src="../assets/Images/TheFlowState.png" alt = "Home">
+          <p>The Flow State</p>
+        </a>
+
+        <!-- Unicode hamburger -->
+        <button id = "hamberger-nav" class="hamburger">&#9776;</button>
+      </nav>
+
+      <nav id="nav-menu" class = "nav nav-bottom">
+        <a href = "../pages/About.html">About</a>
+        <a href = "../pages/connect.html">Connect</a>
+        <a href = "../pages/donation.html">Donate</a>
+        <a href = "../pages/resources.html">Resources</a>
+      </nav>
 
     </header>
 
@@ -107,12 +124,13 @@
       <section class = "footer footer-logo">
         <h1>The Flow State</h1>
         <!-- Tagline -->
+        <!-- <h5>"Keeping NC in Flow"</h5> -->
         <h5>“When Water Flows, Communities Thrive”</h5>
       </section>
 
       <section class = "footer footer-pages">
         <h2>Pages</h2>
-        <a href="../index.html">Home</a>
+        <a href = "index.html">Home</a>
         <a href = "../pages/About.html">About</a>
         <a href = "../pages/connect.html">Connect</a>
         <a href = "../pages/donation.html">Donate</a>
@@ -121,19 +139,18 @@
 
       <section class = "footer footer-socials">
         <h2>Find us on...</h2>
-          <div class = "socials-container">
-            <a class = "instagram-btn" href = "https://www.instagram.com/">
-                <img src = "../assets/Images/Instagram.png" alt = "Instagram">
-            </a>
-            <a class = "fb-btn" href = "https://www.facebook.com/">
-                <img src = "../assets/Images/FB.png" alt = "Facebook">
-            </a>
-          </div>
+        <div class = "socials-container">
+          <a class = "instagram-btn" href = "https://www.instagram.com/">
+          <img src = "../assets/Images/Instagram.png" alt = "Instagram">
+          </a>
+          <a class = "fb-btn" href = "https://www.facebook.com/">
+          <img src = "../assets/Images/FB.png" alt = "Facebook">
+          </a>
+        </div>
       </section>
     </div>
 
   </footer>
-
 
 </body>
 </html>
