--- a/pages/donation.html
+++ b/pages/donation.html
@@ -210,7 +210,7 @@
 
       <section class="footer footer-pages">
         <h2>Pages</h2>
-        <a href="../index.html">Home</a>
+        <a href="../pages/index.html">Home</a>
         <a href="../pages/About.html">About</a>
         <a href="../pages/connect.html">Connect</a>
         <a href="../pages/donation.html">Donate</a>
