--- a/pages/donation-thankyou.html
+++ b/pages/donation-thankyou.html
@@ -108,7 +108,7 @@
 
       <section class="footer footer-pages">
         <h2>Pages</h2>
-        <a href="../index.html">Home</a>
+        <a href="../pages/index.html">Home</a>
         <a href="../pages/About.html">About</a>
         <a href="../pages/connect.html">Connect</a>
         <a href="../pages/donation.html">Donate</a>
